# ChangeLog for x11-themes/baghira
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/baghira/Attic/ChangeLog,v 1.50 2006/10/10 20:50:00 kloeri Exp $

  10 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> baghira-0.7.ebuild:
  Stable on ia64.

  24 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org> baghira-0.7.ebuild:
  Stable on sparc wrt #141454

  23 Jul 2006; Joshua Jackson <tsunam@gentoo.org> baghira-0.7.ebuild:
  Stable x86; bug #141454

  23 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> baghira-0.7.ebuild:
  Add ~x86-fbsd keyword.

  23 Jul 2006; Danny van Dyk <kugelfang@gentoo.org> baghira-0.7.ebuild:
  Marked stable on amd64.

  23 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org> baghira-0.7.ebuild:
  ppc stable, bug #141454

  17 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/baghira-0.7-gcc41.patch, baghira-0.7.ebuild:
  Add patch to build with GCC 4.1, provided by Matteo Azzali in bug #126513.

  26 Nov 2005; Luis Medinas <metalgod@gentoo.org> baghira-0.6e-r1.ebuild:
  Stable on amd64.

  04 Oct 2005; Diego Pettenò <flameeyes@gentoo.org> baghira-0.7.ebuild:
  Added missing dependency over konqueror for the sidebar plugin. Fixes #108056.

  02 Oct 2005; Aron Griffis <agriffis@gentoo.org> baghira-0.6e-r1.ebuild:
  Mark 0.6e-r1 stable on ia64

*baghira-0.7 (01 Oct 2005)

  01 Oct 2005; Konstantin Arkhipov <voxus@gentoo.org> +baghira-0.7.ebuild:
  Version bump.

  17 Sep 2005; Aron Griffis <agriffis@gentoo.org> baghira-0.6e-r1.ebuild:
  Mark 0.6e-r1 stable on alpha

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> baghira-0.6e-r1.ebuild:
  add ~ia64

  17 Jul 2005; Tobias Scherbaum <dertobi123@gentoo.org>
  baghira-0.6e-r1.ebuild:
  ppc stable

  15 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  baghira-0.6e-r1.ebuild:
  Stable on sparc

  15 Jul 2005; Gregorio Guidi <greg_g@gentoo.org> baghira-0.6e-r1.ebuild:
  Stable on x86.
