@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX baghira-0.6e-drop_resize_handle.patch 1175 RMD160 e2680d1d92f907b0fe605599e429682ef21d25b3 SHA1 499488fe503ca1e5be29db4f3c0c1ab356ddb45f SHA256 3ccb3e7502305ed2a8b0132e6fc6efe08e79c52736034aa06be614718040b33b
 MD5 c96920407fffcc205cfd48375eafde0e files/baghira-0.6e-drop_resize_handle.patch 1175
 RMD160 e2680d1d92f907b0fe605599e429682ef21d25b3 files/baghira-0.6e-drop_resize_handle.patch 1175
@@ -6,8 +9,9 @@ AUX baghira-0.7-gcc41.patch 913 RMD160 1e8f24e78c3e496c4a5cd5914eed546895fd420e 
 MD5 111fd63c03d078b5b43b641e58bbd9dc files/baghira-0.7-gcc41.patch 913
 RMD160 1e8f24e78c3e496c4a5cd5914eed546895fd420e files/baghira-0.7-gcc41.patch 913
 SHA256 de43770942aa693f11ced1b9f9a58151af04b0ecb6b9ce94c9f332b8dcb6e248 files/baghira-0.7-gcc41.patch 913
-DIST baghira-0.6e.tar.bz2 807928
+DIST baghira-0.6e.tar.bz2 807928 RMD160 8fad1d9449ed5a493eb8abfb045c31fb54fcd574 SHA1 4b12658861ced49b5b1a4a8884349605a80e0bf4 SHA256 a896bdc7b5e1f185e8432bd58b6fec8912f06d64ee37218dd8cfcd4f23156bc7
 DIST baghira-0.7.tar.bz2 846152 RMD160 e85f6f7144b8549bdc023db26eeb6d0edea82267 SHA1 958c48a0be2ad6cecf86714da68354a593cc740a SHA256 4088ba3fb51561cef0346ec13628abcb20e10f3a372d1a9e3a1a9ed20219f1fa
+DIST baghira-0.8.tar.bz2 916658 RMD160 3458651180f8b890c4537a880fd37e674e902344 SHA1 ce6e60bee947801297e450964791827cfdeac1c5 SHA256 d348f8c7ebcd98f6e4174496425ed641b45a4891dbbf78f504d6b9a95d2ded37
 EBUILD baghira-0.6e-r1.ebuild 754 RMD160 c111535ba4cc00e49f1a28d3ad6098ef98d5cb53 SHA1 5912f2e98bde598c137e35a06cd7d9cd13160c5b SHA256 785bd0b833cc87c3f6b65cb51ddae5c365484ad91c538f4a152aebcadfb8a5d8
 MD5 dfce78f39ce5b4b53c1b5e148dcf3154 baghira-0.6e-r1.ebuild 754
 RMD160 c111535ba4cc00e49f1a28d3ad6098ef98d5cb53 baghira-0.6e-r1.ebuild 754
@@ -16,17 +20,31 @@ EBUILD baghira-0.7.ebuild 654 RMD160 dcf6cc26b4479057e3342008e1b840dd46e28454 SH
 MD5 26ca2918593591de3ec38f248c97de44 baghira-0.7.ebuild 654
 RMD160 dcf6cc26b4479057e3342008e1b840dd46e28454 baghira-0.7.ebuild 654
 SHA256 5c0c26272bcd0db63fac8a5404d55bd1bd250decaa3f43137371fdc1e550f031 baghira-0.7.ebuild 654
-MISC ChangeLog 8126 RMD160 22e51af73299bfcb127f6399c157688cea8d6480 SHA1 ee7ec4a37c947169a146d588484fda34cc2fdb18 SHA256 6dc9e302d888372733cf98149c2cd6fe5eb748e9add95a585703a955a0438e39
-MD5 89cf95b4fe601029d2e81733dbef65be ChangeLog 8126
-RMD160 22e51af73299bfcb127f6399c157688cea8d6480 ChangeLog 8126
-SHA256 6dc9e302d888372733cf98149c2cd6fe5eb748e9add95a585703a955a0438e39 ChangeLog 8126
+EBUILD baghira-0.8.ebuild 588 RMD160 57baeaa8df9e00592fb53764e9dc0151b5435339 SHA1 5196b5728cb309a4d08a56954043381264b8edef SHA256 7f4646eea2ebb2879a64f8c21bd3f05b105bc2b4227efdd20d31e2afe96f3798
+MD5 c8b66672201744009c8aa038ffda3c34 baghira-0.8.ebuild 588
+RMD160 57baeaa8df9e00592fb53764e9dc0151b5435339 baghira-0.8.ebuild 588
+SHA256 7f4646eea2ebb2879a64f8c21bd3f05b105bc2b4227efdd20d31e2afe96f3798 baghira-0.8.ebuild 588
+MISC ChangeLog 8250 RMD160 0269e237cfca788d24d79cfe244a36e503488e52 SHA1 59412fb9c2734fc051c8b1e8b70669ba0bdb89a4 SHA256 744b93d9dcd0bc736d630b1138a6662487836b7e3d73f100b533dc493abfca2c
+MD5 23e2dbc96c7cf675faebef29d18c8cb4 ChangeLog 8250
+RMD160 0269e237cfca788d24d79cfe244a36e503488e52 ChangeLog 8250
+SHA256 744b93d9dcd0bc736d630b1138a6662487836b7e3d73f100b533dc493abfca2c ChangeLog 8250
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a metadata.xml 156
-MD5 0676bc4d0ab8344a3fdbcd7168f26b25 files/digest-baghira-0.6e-r1 65
-RMD160 b2285eaf7d2a0c83b3e50f58d1fa6d6177c28795 files/digest-baghira-0.6e-r1 65
-SHA256 21e75bec27de5a4486907d64fc532b5c11b0b868d23f4615e8f4fe8e71faed82 files/digest-baghira-0.6e-r1 65
+MD5 399a6ba95a33660c36afb36c6ce1a9a5 files/digest-baghira-0.6e-r1 241
+RMD160 49b5b265a089a7cb77dda5552f7e905a4898fd1d files/digest-baghira-0.6e-r1 241
+SHA256 0636681063341b434ddfbe3aa2fb07ddde6775d7ed1f7c533238b3926305e7ee files/digest-baghira-0.6e-r1 241
 MD5 abe9c6e0c83968af70a1b1e965748a2f files/digest-baghira-0.7 238
 RMD160 c4a9bf02b2c6f392dc590d5d96ff8138d14d7c11 files/digest-baghira-0.7 238
 SHA256 f5f1fc45d0a4a9a9e8809dff5902c71f21bd2eebcfbf6a5129c54c52874f3de7 files/digest-baghira-0.7 238
+MD5 c01e93aaf675f5d3104269043844842c files/digest-baghira-0.8 238
+RMD160 0dca954ec38527b2400d9b8f8ce183d586512bfd files/digest-baghira-0.8 238
+SHA256 36fe66685c568e26c233a5621100f2a65b671273412dafd79632b31517d7067c files/digest-baghira-0.8 238
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFFOia9bwxeDFj+ScoRAqPLAKCgSkZbFxWSI+umW2s71xH6d0kmlACgq0tp
+1OGjOioSjJK8WbSVrA0lS/c=
+=Ucsa
+-----END PGP SIGNATURE-----
