@@ -1,0 +1,19 @@
+# Copyright 1999-2006 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/baghira/Attic/baghira-0.8.ebuild,v 1.1 2006/10/21 13:54:56 voxus Exp $
+
+inherit kde
+
+DESCRIPTION="Baghira - an OS-X like style for KDE"
+HOMEPAGE="http://baghira.sourceforge.net/"
+SRC_URI="mirror://sourceforge/baghira/${P}.tar.bz2"
+LICENSE="GPL-2"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~sparc ~x86 ~x86-fbsd"
+IUSE=""
+
+DEPEND="|| ( kde-base/kwin >=kde-base/kdebase-3.3 )
+	|| ( kde-base/konqueror >=kde-base/kdebase-3.3 )"
+
+need-kde 3.3
