@@ -1,1 +1,3 @@
 MD5 987b598c00ba09dad8ff62ea405f9873 baghira-0.6e.tar.bz2 807928
+RMD160 8fad1d9449ed5a493eb8abfb045c31fb54fcd574 baghira-0.6e.tar.bz2 807928
+SHA256 a896bdc7b5e1f185e8432bd58b6fec8912f06d64ee37218dd8cfcd4f23156bc7 baghira-0.6e.tar.bz2 807928
