@@ -1,0 +1,3 @@
+MD5 d76e04020c628ba5de69d066a66221f8 baghira-0.8.tar.bz2 916658
+RMD160 3458651180f8b890c4537a880fd37e674e902344 baghira-0.8.tar.bz2 916658
+SHA256 d348f8c7ebcd98f6e4174496425ed641b45a4891dbbf78f504d6b9a95d2ded37 baghira-0.8.tar.bz2 916658
